--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
       "ext-mysql_xdevapi": "*",
-        "ext-openssl": "*"
-    },
+        "ext-openssl": "*"     },
     "require-dev": {
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
